Changes + generated files

--- a/Changes
+++ b/Changes
@@ -6,12 +6,14 @@ Revision history for DBIx-Class-Smooth
  [Bug Fixes]
 
  [Documentation]
+ - Improvements to documentation.
 
  [Enhancements]
 
  [New Features]
 
  [Other Changes]
+ - Tests improved.
 
  [Requirements]
 
